# Customer-Service-Agent

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  HR回复_SaaS和seedance.txt  HR回复_知识图谱项目.txt  HR回复_第四题_俱乐部版.txt  HR回复话术.txt  HR第二轮回复话术.txt  HR面试回答_最小可用Agent模板.md  README.md  alembic.ini  analytics_service.py  api_client.py  codebase-understanding.md  create_ticket.py  database.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  feature_list.json  init.cmd  init.ps1  init.sh  kb_service.py  models.py  orchestrator_api.py  orchestrator_mcp_tool.py  orchestrator_runtime.py  order_api.py  progress.md  pyproject.toml  run_create_return.py  run_test3_return.py  (+9 more)
.claude/: mcp.json  settings.json
.claude/agents/: after-sales-agent.md  analytics-agent.md  complaint-agent.md  consultation-agent.md  cs-coordinator.md  customer-service-dispatcher.md  customer-service-orchestrator.md  data-analysis-agent.md  faq-agent.md  git-agent.md  human-handoff-agent.md  logistics-agent.md  order-agent.md  order-inquiry-agent.md  recommendation-agent.md  refund-agent.md  transfer-agent.md  work-order-agent.md
.claude/skills/: cs-chat.md
.codex/: hooks.json  mcp.json
.codex/agents/: after-sales-agent.toml  complaint-agent.toml  consultation-agent.toml  customer-service-dispatcher.toml  customer-service-orchestrator.toml  data-analysis-agent.toml  human-handoff-agent.toml  (+2 more)
alembic/: env.py
data/: faq.json
docs/: memory-progress-handoff.md  patterns-applied.md  production-hardening.md  standardized-sequences.md  verification-workflow.md
mcp_server/: git_server.py  server.py
memory/: MEMORY.md  query_shipment.py  routing-order-inquiry-direct.md
monitoring/: alerts.yml  prometheus.yml
reports/: harness-assessment.html
resume/: resume.typ
resume-project-experience/: resume-project-experience.html
scripts/: backup_mysql.py  build_index.py  generate_daily_usage_report.py  install_daily_analytics_task.ps1
src/: __init__.py  agent_assist_service.py  agent_routing.py  analytics_agent.py  analytics_service.py  api_client.py  api_dependencies.py  attribution_service.py  config.py  database.py  degradation.py  demand_mining_service.py  dispatcher.py  human_handoff_upgrade.py  kb_service.py  log_config.py  metrics.py  models.py  numbering.py  orchestrator_api.py  orchestrator_mcp_tool.py  orchestrator_runtime.py  order_api.py  profit_engine_hooks.py  rate_limit.py  recommendation_agent.py  recommendation_service.py  request_logging.py  security.py  seed_data.py  server.py  server_customer.py  service_layer.py  user_profile_service.py
tests/: __init__.py  conftest.py  test_api_and_migration_e2e.py  test_attribution_service.py  test_concurrency_idempotency.py  test_concurrency_isolation.py  test_concurrency_numbering.py  test_concurrency_sqlite_wal.py  test_daily_analytics.py  test_demand_mining_service.py  test_harness_risk_controls.py  test_human_handoff_upgrade.py  test_load_orchestrator.py  test_metrics_prometheus.py  test_orchestrator_e2e.py  test_orchestrator_profit_integration.py  test_peak_load_degradation.py  test_production_hardening.py  test_profit_dashboard_api.py  test_profit_engine_migration.py  test_rag_customer_scenarios.py  test_rag_faq.py  test_recommendation_service.py  test_scenario3_return.py  test_security_controls.py  test_smoke.py  test_structlog_rate_limit.py  test_user_profile_service.py
(+54 files in other folders)
