[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mcp-order-server"
version = "0.1.0"
description = "Customer Service Agent 2.0 — multi-agent orchestration platform"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "PyJWT[crypto]>=2.8.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
order-server = "server:main"
seed-orders = "seed_data:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
