[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mcp-order-server"
version = "0.1.0"
description = "Customer Service Agent 2.0 — multi-agent orchestration platform"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "PyJWT[crypto]>=2.8.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy>=2.0.0",
    "structlog>=26.1.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.30.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
order-server = "server:main"
seed-orders = "seed_data:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pip-audit>=2.7",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
markers = [
    "slow: 较慢的并发测试,可用 -m 'not slow' 跳过",
    "load: 负载吞吐测试,默认不在门禁中运行",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in default args is the standard pattern

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "E501"]  # sys.path manipulation + Chinese test strings

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/seed_data.py", "src/server_customer.py", "src/server.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60
